# e-commerce-data-engineering

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: update_readme_data.yml
api_server/: Dockerfile  main.py  requirements.txt
api_server/core/: recommendation_logic.py
batch_processor/dags/: train_recommend_model_dag.py
batch_processor/jobs/: model_trainer.py
batch_processor/sql/: user_behavior.sql
data_producer/: config.py  producer.py
infra/: docker-compose.yml
infra/airflow/: Dockerfile
infra/terraform/: provider.tf  s3.tf  variables.tf
stream_processor/: process_stream.py
stream_processor/jobs/: feature_engineering.py
