[tool.poetry]
name = "e-commerce-de"
version = "1.0.0"
description = ""
authors = ["whqtker"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
faker = "^19.0.0"
kafka-python = "^2.0.2"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
structlog = "^23.0.0"
click = "^8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line-length = 100
