[tool.poetry]
name = "e-commerce-de"
version = "1.0.0"
description = ""
authors = ["whqtker"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
faker = "^19.0.0"
kafka-python = "^2.0.2"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
structlog = "^23.0.0"
click = "^8.0.0"
python-snappy = "^0.7.3"
redis = "^6.4.0"
pyspark = "3.5.6"
apache-airflow = "2.10.0"
apache-airflow-providers-apache-spark = "5.3.0"
boto3 = "^1.40.17"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line-length = 100
